# EngagementClipCreator

./: .gitignore  README.md  pyproject.toml
ecc/: __init__.py
ecc/app/: cli.py
ecc/asr/: transcribe.py  transcript_cleanup.py  transcript_schema.py
ecc/ingest/: extract_audio.py  make_proxy.py  media_probe.py
ecc/moments/: features.py  score.py  scored_schema.py  select.py
ecc/narration/: beat_sheet.py  script_writer.py  tts.py
ecc/planning/: edl.py  pacing.py
ecc/render/: audio_mix.py  captions.py  concat.py  cut.py  export.py
ecc/retrieval/: embed_store.py  faiss_index.py  match_beats.py
ecc/schemas/: config.py  job.py
ecc/segmentation/: build_candidates.py  candidate_schema.py  scene_detect.py
